--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "tabWidth": 2,
   "semi": true,
   "bracketSpacing": true,
-  "arrowParens": "always",
-  "printWidth": 150
+  "arrowParens": "always"
 }
