--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
-    "start": "npm run build && node --env-file=.env  dist/index.js"
+    "start:local": "npm run build && node --env-file=.env  dist/index.js",
+    "start": "npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "envalid": "^8.0.0",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
+    "iterare": "^1.2.1",
+    "iterate": "^0.1.1",
+    "lodash": "^4.17.21",
+    "lowdb": "^7.0.1",
     "prettier": "^3.4.2",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "typedi": "^0.10.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/lowdb": "^1.0.15",
     "@types/node": "^22.10.10",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
