--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
     "start:local": "npm run build && node --env-file=.env  dist/index.js",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/index.js",
+    "lint": "eslint",
+    "lint:fix": "npm run lint -- --fix"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,6 @@
     "iterate": "^0.1.1",
     "lodash": "^4.17.21",
     "lowdb": "^7.0.1",
-    "prettier": "^3.4.2",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0",
     "uuid": "^11.0.5"
@@ -32,12 +33,19 @@
     "@types/express": "^5.0.0",
     "@types/lowdb": "^1.0.15",
     "@types/node": "^22.10.10",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "dotenv": "^16.4.7",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "nodemon": "^3.1.9",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0"
   }
 }
