--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "envalid": "^8.0.0",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
-    "iterare": "^1.2.1",
-    "iterate": "^0.1.1",
     "lodash": "^4.17.21",
     "lowdb": "^7.0.1",
     "reflect-metadata": "^0.2.2",
